Add UserDTO and rename email to login
