# backend/Controllers/UsersController.cs
@@ -6,7 +6,6 @@ using Microsoft.AspNetCore.Mvc;
 using Microsoft.AspNetCore.Identity;
 using CbtBackend.Models;
 using CbtBackend.Models.Requests;
-using CbtBackend.Models.Responses;
 using CbtBackend.Services;
 
 namespace CbtBackend.Controllers;
@@ -56,27 +55,29 @@ public class UsersController : ControllerBase {
 
     [HttpGet(ApiRoutes.User.GetAll)]
     public async Task<IActionResult> GetAllUsers() {
-        return Ok(await userService.GetAllUsersAsync());
+        var users = await userService.GetAllUsersAsync();
+
+        return Ok(users.Select(e => new UserDTO(e)).ToList());
     }
 
     [HttpGet(ApiRoutes.User.GetByEmail)]
-    public async Task<IActionResult> GetUserByEmail([FromRoute] string email) {
-        var user = await userManager.FindByEmailAsync(email);
+    public async Task<IActionResult> GetUserByEmail([FromRoute] string login) {
+        var user = await userManager.FindByEmailAsync(login);
 
         if (user == null) {
             return NotFound();
         }
 
-        return Ok(user);
+        return Ok(new UserDTO(user));
     }
 
     [HttpPut(ApiRoutes.User.UpdateByEmail)]
-    public async Task<IActionResult> UpdateUser([FromRoute] string email, [FromBody] UserUpdateRequest userRequest) {
-        logger.LogDebug("Updating user with data [email = {email}, password = {password}], age= {age}, gender= {gender}, banned= {banned}, userStatus= {status}",
+    public async Task<IActionResult> UpdateUser([FromRoute] string login, [FromBody] UserUpdateRequest userRequest) {
+        logger.LogDebug("Updating user with data [email = {login}, password = {password}], age= {age}, gender= {gender}, banned= {banned}, userStatus= {status}",
             userRequest.Email, userRequest.Password, userRequest.Age, userRequest.Gender, userRequest.Banned, userRequest.UserStatus);
 
         try {
-            var response = await userService.UpdateUserAsync(email, userRequest);
+            var response = await userService.UpdateUserAsync(login, userRequest);
             return Ok(new { });
 
         } catch (RegistrationException e) {
@@ -88,11 +89,11 @@ public class UsersController : ControllerBase {
     }
 
     [HttpDelete(ApiRoutes.User.DeleteByEmail)]
-    public async Task<IActionResult> DeleteUser([FromRoute] string email) {
-        logger.LogDebug("Deleting user with data [email = {email}]", email);
+    public async Task<IActionResult> DeleteUser([FromRoute] string login) {
+        logger.LogDebug("Deleting user with data [email = {login}]", login);
 
         try {
-            var response = await userManager.FindByEmailAsync(email);
+            var response = await userManager.FindByEmailAsync(login);
             return Ok(new { });
 
         } catch (DeleteException e) {
@@ -106,7 +107,7 @@ public class UsersController : ControllerBase {
     [HttpPost(ApiRoutes.User.Register)]
     public async Task<IActionResult> RegisterUser([FromBody] UserRegistrationRequest userRequest) {
         logger.LogDebug("Registering user with data [email = {email}, password = {password}], age= {age}, gender= {gender}, banned= {banned}",
-            userRequest.Email, userRequest.Password, userRequest.Age, userRequest.Gender, userRequest.Banned);
+            userRequest.Login, userRequest.Password, userRequest.Age, userRequest.Gender, userRequest.Banned);
 
         try {
             var response = await userService.RegisterUserAsync(userRequest);
